delete cars dan pasang toast

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,7 +2,7 @@
 // app.scss
 // Fonts
 // @import url('https://fonts.googleapis.com/css?family=Nunito');
-
+ @import 'toastr';
 // Variables
 // @import 'variables';
 
